[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/variations/0/Var0_0.gd" type="Script" id=1]
[ext_resource path="res://assets/theme/pensatta-theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/img/TitleRect.png" type="Texture" id=3]
[ext_resource path="res://assets/font/Montserrat-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://TimeSprite.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/variations/0/RedCell.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/variations/0/Bacteria.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/font/Montserrat-Medium.ttf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=1]
size = 41
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.341176, 0.639216, 0.87451, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.756863, 0.756863, 0.756863, 1 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 28
font_data = ExtResource( 8 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1440.0
margin_bottom = 900.0
color = Color( 0.254902, 0.560784, 0.529412, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="RectTitleSprite" type="Sprite" parent="."]
position = Vector2( 0, 40 )
texture = ExtResource( 3 )
centered = false

[node name="TitleLabel" type="Label" parent="RectTitleSprite"]
margin_left = 88.2626
margin_top = 7.93414
margin_right = 507.263
margin_bottom = 58.9341
custom_fonts/font = SubResource( 1 )
text = "Título del problema"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextButton" type="Button" parent="."]
margin_left = 1014.0
margin_top = 794.0
margin_right = 1388.0
margin_bottom = 841.0
theme = ExtResource( 2 )
text = "SIGUIENTE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeSprite" parent="." instance=ExtResource( 5 )]

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( 190.271, 322.163 )

[node name="ColorRect2" type="ColorRect" parent="Node2D"]
margin_right = 1070.0
margin_bottom = 328.0
color = Color( 0.631373, 0.196078, 0.196078, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect3" type="ColorRect" parent="Node2D/ColorRect2"]
margin_top = 24.0
margin_right = 1070.0
margin_bottom = 307.0
color = Color( 0.960784, 0.658824, 0.658824, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BloodCells" type="Node2D" parent="Node2D/ColorRect2/ColorRect3"]

[node name="Node2D" parent="Node2D/ColorRect2/ColorRect3/BloodCells" instance=ExtResource( 6 )]
position = Vector2( 5.02914, 13.2249 )

[node name="Node2D2" parent="Node2D/ColorRect2/ColorRect3/BloodCells" instance=ExtResource( 6 )]
position = Vector2( 436.981, 26.6212 )

[node name="Node2D16" parent="Node2D/ColorRect2/ColorRect3/BloodCells" instance=ExtResource( 6 )]
position = Vector2( 402.963, 175.292 )

[node name="Node2D3" parent="Node2D/ColorRect2/ColorRect3/BloodCells" instance=ExtResource( 6 )]
position = Vector2( 786.365, 48.6451 )

[node name="Node2D5" parent="Node2D/ColorRect2/ColorRect3/BloodCells" instance=ExtResource( 6 )]
position = Vector2( 799.005, 157.755 )

[node name="Node2D7" parent="Node2D/ColorRect2/ColorRect3/BloodCells" instance=ExtResource( 6 )]
position = Vector2( 312.445, 83.4612 )

[node name="Node2D8" parent="Node2D/ColorRect2/ColorRect3/BloodCells" instance=ExtResource( 6 )]
position = Vector2( 53.3023, 171.936 )

[node name="Node2D9" parent="Node2D/ColorRect2/ColorRect3/BloodCells" instance=ExtResource( 6 )]
position = Vector2( 950.966, 14.7204 )

[node name="Node2D11" parent="Node2D/ColorRect2/ColorRect3/BloodCells" instance=ExtResource( 6 )]
position = Vector2( 657.404, 197.409 )

[node name="Node2D12" parent="Node2D/ColorRect2/ColorRect3/BloodCells" instance=ExtResource( 6 )]
position = Vector2( 179.894, 37.399 )

[node name="Node2D13" parent="Node2D/ColorRect2/ColorRect3/BloodCells" instance=ExtResource( 6 )]
position = Vector2( 231.551, 175.99 )

[node name="Node2D14" parent="Node2D/ColorRect2/ColorRect3/BloodCells" instance=ExtResource( 6 )]
position = Vector2( 528.892, 138.193 )

[node name="Node2D15" parent="Node2D/ColorRect2/ColorRect3/BloodCells" instance=ExtResource( 6 )]
position = Vector2( 956.005, 178.51 )

[node name="Node2D17" parent="Node2D/ColorRect2/ColorRect3/BloodCells" instance=ExtResource( 6 )]
position = Vector2( 651.104, 53.778 )

[node name="Bacterias" type="Node2D" parent="Node2D/ColorRect2/ColorRect3"]

[node name="Node2D18" parent="Node2D/ColorRect2/ColorRect3/Bacterias" instance=ExtResource( 7 )]
position = Vector2( 511.797, 108.597 )

[node name="Node2D17" parent="Node2D/ColorRect2/ColorRect3/Bacterias" instance=ExtResource( 7 )]
position = Vector2( 923.792, 126.236 )

[node name="Node2D4" parent="Node2D/ColorRect2/ColorRect3/Bacterias" instance=ExtResource( 7 )]
position = Vector2( 22.9482, 116.157 )

[node name="Node2D6" parent="Node2D/ColorRect2/ColorRect3/Bacterias" instance=ExtResource( 7 )]
position = Vector2( 754.962, -4.7959 )

[node name="Node2D10" parent="Node2D/ColorRect2/ColorRect3/Bacterias" instance=ExtResource( 7 )]
position = Vector2( 273.673, 17.8828 )

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = 282.0
margin_top = 675.0
margin_right = 1257.0
margin_bottom = 717.0
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttackButton" type="Button" parent="."]
margin_left = 469.122
margin_top = 247.252
margin_right = 976.122
margin_bottom = 294.252
theme = ExtResource( 2 )
text = "GLÓBULOS BLANCOS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 200.324
margin_top = 677.586
margin_right = 264.324
margin_bottom = 713.586
custom_fonts/font = SubResource( 5 )
text = "Vida"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="AttackButton" to="." method="_on_AttackButton_pressed"]
